--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
-* Twittering Plug
+* Twittering Plus
   Monkey patches for [[http://emacswiki.org/emacs/TwitteringMode][twittering-mode]].
 
 ** Installation
    WIP.
 
 ** Key binding
-   twittering-plus provides other twitter clients like key binding.
+   twittering-plus provides other twitter clients like key binding. Add the following code into your =.emacs=
    + [[https://sites.google.com/site/yorufukurou/][YoruFukurou]] =(twittering+tern-on-yorufukurou)=
